refactor(core): 简化凭证属性创建并优化URL处理
- 移除CredentialAttributes构造函数中的冗余参数
- 为CustomSiteRuleDialog的documentChanged方法添加project参数
- 将MimoTTSClient中的URL创建方式改为使用URI.create().toURL()
- 在SearchService中使用三元运算符替代StringUtils.defaultString
- 将StreamTTSPlayer中的URL创建方式改为使用URI.create().toURL()